@@ -43,7 +43,7 @@ void Image_window::show_scaled8to8_2x_noblur
 						paletted_surface->format);
 	Scale2x_noblur<uint8, Manip8to8>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 				(uint8 *) inter_surface->pixels, 
 				inter_surface->pitch,
 			manip);
@@ -58,7 +58,7 @@ void Image_window::show_scaled8to16_2x_noblur
 						inter_surface->format);
 	Scale2x_noblur<unsigned char, uint16, Manip8to16>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -74,7 +74,7 @@ void Image_window::show_scaled8to555_2x_noblur
 						inter_surface->format);
 	Scale2x_noblur<unsigned char, uint16, Manip8to555>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -90,7 +90,7 @@ void Image_window::show_scaled8to565_2x_noblur
 						inter_surface->format);
 	Scale2x_noblur<unsigned char, uint16, Manip8to565>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
@@ -106,7 +106,7 @@ void Image_window::show_scaled8to32_2x_noblur
 						inter_surface->format);
 	Scale2x_noblur<unsigned char, uint32, Manip8to32>
 		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
-		    ibuf->line_width, ibuf->height, 
+		    ibuf->line_width, ibuf->height+guard_band, 
 		    (uint32 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
