@@ -1,3 +1,7 @@
+2010-10-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* scale_*.cc: add missing guard bands. This should fix artifacts along the
+	  bottom edge of the screen.
+
 2010-10-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* scale_bilinear.cc, scale_2x.cc: add missing guard bands. This should fix
 	  the bilinearplus crashes.
